# wheelhouse

./: .dockerignore  .gitignore  .mcp.json  .proto.sha256  .protoc.sha256  CONTRIBUTING.md  Cargo.toml  Dockerfile  ERRORS.md  LICENSE  Makefile  README.md  SECURITY.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  release.yml  sdk-python.yml
_bmad-output/planning-artifacts/: prd.md
agent-claude/: .dockerignore  Dockerfile  pyproject.toml
agent-claude/agent_claude/: __init__.py  __main__.py  batch_publisher.py  claude_client.py  context.py  errors.py  layers.py  loop.py  main.py  persona.py  response_parser.py  topology_edit.py
agent-claude/tests/: test_batch_publisher.py  test_context.py  test_layers.py  test_loop.py  test_response_parser.py  test_startup.py  test_topology_edit.py
crates/: README.md
crates/wh-broker/: Cargo.toml  Dockerfile  Dockerfile.local
crates/wh-broker/src/: builtin_skill.rs  config.rs  error.rs  lib.rs  main.rs  skill_router.rs
crates/wh-broker/src/control/: handlers.rs  mod.rs
crates/wh-broker/src/cron/: chain.rs  dispatcher.rs  handler.rs  mod.rs  orchestrator.rs  proto_bridge.rs  skill_handler.rs
crates/wh-broker/src/deploy/: apply.rs  approval.rs  autonomous.rs  gitignore.rs  lint.rs  memory.rs  mod.rs  persona.rs  plan.rs  podman.rs
crates/wh-broker/src/metrics/: mod.rs
crates/wh-broker/src/monitor/: error.rs  mod.rs  registry.rs  silence.rs
crates/wh-broker/src/registry/: mod.rs
crates/wh-broker/src/routing/: mod.rs
crates/wh-broker/src/wal/: compaction.rs  mod.rs  writer.rs
crates/wh-broker/tests/: acceptance_broker.rs  acceptance_pubsub.rs  acceptance_stream.rs  cron_acceptance_test.rs  cron_reaction_test.rs  cron_skill_chain_test.rs  destroy_acceptance.rs  gitignore_acceptance.rs  loop_detection_acceptance.rs  persona_acceptance.rs  stream_context_acceptance.rs  topology_destroy_acceptance.rs  wh_read_smoke_test.rs
crates/wh-cli/: Cargo.toml  build.rs
crates/wh-cli/src/: lib.rs  lint.rs  main.rs  model.rs  reconnect.rs
crates/wh-cli/src/client/: mod.rs
crates/wh-cli/src/commands/: capabilities.rs  compact.rs  completion.rs  deploy.rs  doctor.rs  logs.rs  memory.rs  mod.rs  ps.rs  reference.rs  secrets.rs  skill.rs  status.rs  stream.rs  surface.rs  telegram.rs  topology.rs
crates/wh-cli/src/output/: error.rs  json.rs  mod.rs  table.rs
crates/wh-cli/tests/: acceptance_install.rs  acceptance_reconnect.rs  agent_invoke_plan_apply.rs  autonomous_loop.rs  compaction_git.rs  completion_acceptance.rs  deploy_apply_acceptance.rs  deploy_apply_git_commit.rs  deploy_lint_acceptance.rs  deploy_plan_hash_determinism.rs  deploy_plan_json_output.rs  deploy_plan_preview_acceptance.rs  doctor_acceptance.rs  error_system_acceptance.rs  logs_acceptance.rs  memory_git.rs  ps_acceptance.rs  secrets_polish_acceptance.rs  stream_tail_acceptance.rs  test_surface_cli.rs  threshold_approval.rs  topology_apply_acceptance.rs  topology_apply_git_commit.rs  topology_lint_acceptance.rs  topology_plan_hash_determinism.rs  topology_plan_json_output.rs  topology_plan_preview_acceptance.rs
crates/wh-cli/tests/fixtures/: modified.wh  modified_reordered.wh  unchanged.wh
crates/wh-proto/: CHANGELOG.md  Cargo.toml  build.rs
crates/wh-proto/src/: lib.rs
crates/wh-proto/tests/: generate_fixtures.rs  proto_compat.rs
crates/wh-skill/: Cargo.toml
crates/wh-skill/src/: allowlist.rs  cache.rs  config.rs  directory.rs  error.rs  executor.rs  invocation.rs  lib.rs  manifest.rs  pipeline.rs  repository.rs
crates/wh-skill/tests/: acceptance_test.rs  invocation_integration_test.rs
crates/wh-stream/: Cargo.toml
crates/wh-stream/src/: lib.rs
crates/wh-telegram/: Cargo.toml  Dockerfile  Dockerfile.local
crates/wh-telegram/src/: ack.rs  bridge.rs  config.rs  error.rs  lib.rs  main.rs  mapping.rs  routing.rs  state.rs  surface.rs
crates/wh-telegram/tests/: acceptance_tests.rs  runner_acceptance_tests.rs
crates/wh-user/: Cargo.toml
crates/wh-user/src/: error.rs  git.rs  lib.rs  store.rs
crates/wh-user/tests/: test_git.rs  test_integration.rs  test_store.rs
crates/wh-user/wh-user/src/: error.rs  git.rs
crates/wh-user/wh-user/tests/: test_store.rs
data/telegram/: chat_mappings.yaml
data/users/.wh/users/: usr_305126d2b5d80877.yaml  usr_3e3e6f1d6e4c2068.yaml  usr_721f929f48818bc8.yaml
docs/: astro.config.mjs  package-lock.json  project-scan-report.json
docs/public/: CNAME
docs/src/content/docs/: index.mdx
docs/src/content/docs/concepts/: agents.md  cron.md  git-backend.md  overview.md  personas.md  skills.md  streams.md  surfaces.md
docs/src/content/docs/configuration/: guardrails.md  providers.md  wh-files.md
docs/src/content/docs/getting-started/: installation.mdx  introduction.md  quick-start.md
docs/src/content/docs/guides/: custom-surface.md  first-agent.md  write-skill.md
docs/src/content/docs/reference/cli/: index.md
docs/src/content/docs/sdk/: mcp.md  python.md
docs/src/styles/: custom.css
examples/: 01_register_type.py  02_publish_subscribe.py  03_custom_surface.py  04_testing.py
mcp/wheelhouse-mcp/: README.md  pyproject.toml  server.py
proto/: stream.proto
proto/wheelhouse/v1/: core.proto  skills.proto  stream.proto  system.proto
schemas/: capabilities-schema.json  list-types.json  register-type.json
scripts/: install.sh
sdk/python/: .gitignore  Makefile  README.md  pyproject.toml
sdk/python/tests/: conftest.py  test_connect.py  test_import.py  test_publish.py  test_reconnect.py  test_subscribe.py  test_surface.py  test_type_registration.py
sdk/python/wheelhouse/: __init__.py  _core.py  errors.py  fixtures.py  testing.py  types.py
sdk/python/wheelhouse/_proto/: .gitignore  __init__.py
sdk/python/wheelhouse/_proto/wheelhouse/v1/: __init__.py
tests/: secrets_init_acceptance.rs
tests/acceptance/: test_mcp_server.py  test_mock_mode.py  test_sdk_docs.py  test_sdk_examples.py  test_sdk_type_registration.py  test_type_registry.rs
tests/e2e/: status.sh  stream_advanced.sh  stream_roundtrip.sh
