[workspace]
members = [
    "crates/wh-broker",
    "crates/wh-cli",
    "crates/wh-stream",
    "crates/wh-proto",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://wheelhouse.paris"
repository = "https://github.com/Wheelhouse-Paris/wheelhouse"
authors = ["The Wheelhouse Paris <hello@wheelhouse.paris>"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
clap = { version = "4", features = ["derive"] }
prost = "0.13"
zeromq = "0.4"
sha2 = "0.10"
tempfile = "3"
