[workspace]
members = [
    "crates/wh-broker",
    "crates/wh-cli",
    "crates/wh-stream",
    "crates/wh-proto",
    "crates/wh-skill",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://wheelhouse.paris"
repository = "https://github.com/Wheelhouse-Paris/wheelhouse"
authors = ["The Wheelhouse Paris <hello@wheelhouse.paris>"]

[workspace.dependencies]
# Runtime
tokio = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
clap = { version = "4", features = ["derive"] }
keyring = { version = "3", features = ["apple-native", "linux-native"] }
dialoguer = "0.11"
console = "0.15"
prost = "0.13"
zeromq = "0.4"
git2 = "0.19"
sha2 = "0.10"
tempfile = "3"

# Proto build
prost-build = "0.13"
prost-types = "0.13"
protoc-bin-vendored = "3"

# Internal crates
wh-proto = { path = "crates/wh-proto" }
