[project]
name = "agent-claude"
version = "0.1.0"
description = "Wheelhouse agent-claude — Claude API agent container for Wheelhouse streams"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "The Wheelhouse Paris", email = "hello@wheelhouse.paris" },
]
dependencies = [
    "wheelhouse",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_claude"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
wheelhouse = { path = "../sdk/python" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
