[package]
name = "wh-broker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wh-proto = { path = "../wh-proto" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
