[package]
name = "wh-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wh"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
zeromq = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
