[package]
name = "wh-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wheelhouse CLI — unified control plane for operators and agents"

[[bin]]
name = "wh"
path = "src/main.rs"

[dependencies]
wh-proto = { workspace = true }
wh-broker = { path = "../wh-broker" }
tokio = { workspace = true, features = ["rt", "macros"] }
clap = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
keyring = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
