[package]
name = "wh-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wh"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
