[package]
name = "wh-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Protobuf type definitions for Wheelhouse stream objects"

[dependencies]
prost = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
protoc-bin-vendored = { workspace = true }
