[package]
name = "wh-skill"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description = "Skill definition, manifest parsing, and git-based skill repository for Wheelhouse"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
git2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
