[package]
name = "wh-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
teloxide = { workspace = true }
wh-proto = { path = "../wh-proto" }
wh-user = { path = "../wh-user" }

[dev-dependencies]
tempfile = { workspace = true }
