[package]
name = "wh-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wh-telegram"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "net", "time", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
teloxide = { workspace = true }
zeromq = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
tokio-util = { workspace = true, features = ["rt", "time"] }
wh-proto = { path = "../wh-proto" }
wh-user = { path = "../wh-user" }

[dev-dependencies]
tempfile = { workspace = true }
