[project]
name = "wheelhouse"
version = "0.1.0"
description = "Wheelhouse Python SDK — stream participant for agents and surfaces"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "pyzmq>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "grpcio-tools>=1.60",
    "betterproto[compiler]>=2.0.0b6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
