[project]
name = "wheelhouse"
version = "0.1.0"
description = "Python SDK for Wheelhouse — connect, publish, and subscribe to streams"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "The Wheelhouse Paris", email = "hello@wheelhouse.paris" },
]
dependencies = [
    "pyzmq>=25.0",
    "betterproto>=2.0.0b7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyright>=1.1",
    "grpcio-tools>=1.60",
    "betterproto[compiler]>=2.0.0b7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
